# refl-analysis

./: .gitattributes  .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
.cursor/skills/xray-data-science/: SKILL.md
@data/: README.md
@data/xrr/photoresist/: README.md
@data/xrr/znpc/: README.md
@models/: README.md
@models/optical/znpc/: README.md
@models/xrr/znpc/: README.md
configs/: hf-artifacts.toml
notebooks/data_collection/: 04-2026.ipynb
notebooks/exploration/: 20260219_BeamTimeData.ipynb  Exported2026-02-18_16-02-28_20260205_HOPGEnergyScans_VaryingEnergyResolution.xlsx  angle_dispersion.ipynb  fixed_angle.ipynb  modeling.ipynb  panel.ipynb  vis.ipynb
notebooks/exploration/outputs/fixed_angle/: fixed_angle_sensitivity.parquet  fixed_angle_sensitivity_salib.parquet
notebooks/fitting/: dft_intefrace_fix.ipynb  dft_model_update.ipynb  free model fitting.ipynb  free_model_update.ipynb  interface_width_fix.ipynb  just_283.7.ipynb  mle_analysis.ipynb  reuse_old.ipynb
notebooks/manuscript/: dft_slab_orientation.csv  fig_fitting.ipynb  fig_optical_tensor.ipynb  fig_orientation.ipynb  fig_profile.ipynb.ipynb  fit_2_profile.ipynb  fit_profile.ipynb  fit_profile.py  free_tensor_orientation.csv  model_stats.csv  model_stats.parquet  models_renaming.ipynb  profile_density.ipynb  profile_discretization.ipynb  profile_surface.ipynb  si_anisotropy_comparison.ipynb
notebooks/optical_models/: interpolation.ipynb  lineshape_differences.ipynb
reports/: doe_grant.ipynb
scripts/: bootstrap.sh  hf_sync.py
src/data/: nexafs_directory.py
src/utils/: __init__.py  profile_slab.py  slab_builders.py
src/utils/helpers/: fitting_helper.py  io.py  plotting_helper.py  prompts.py
src/xrr_notebooks.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
