[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xrr-notebooks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arviz>=0.23.1",
    "awkward>=2.9.0",
    "blosc2>=4.0.0",
    "bluesky-tiled-plugins>=2.0.2",
    "corner>=2.2.3",
    "dask>=2026.1.2",
    "entrypoints>=0.4",
    "fastparquet>=2025.12.0",
    "h5py>=3.15.1",
    "holoviews>=1.22.1",
    "hvplot>=0.12.2",
    "ipyaggrid>=0.5.4",
    "ipywidgets>=8.1.8",
    "joypy>=0.2.6",
    "jupyterlab>=4.5.2",
    "lz4>=4.4.5",
    "matplotlib",
    "ndindex>=1.10.1",
    "notebook>=7.5.2",
    "notion-notebook",
    "numba>=0.63.1",
    "numpy",
    "ollama>=0.6.1",
    "openpyxl>=3.1.5",
    "pandas",
    "pyarrow>=23.0.0",
    "pyhyperscattering[bluesky,ui]",
    "pyref",
    "pyrefly>=0.38.2",
    "rich>=14.3.2",
    "ridgeplot>=0.5.0",
    "ruff",
    "salib>=1.5.2",
    "scienceplots>=2.1.1",
    "sparse>=0.18.0",
    "stamina>=25.2.0",
    "tiled>=0.2.4",
    "uncertainties>=3.2.3",
    "watchfiles>=1.1.1",
    "websockets>=16.0",
    "xarray>=2025.12.0",
    "zarr>=3.1.5",
    "zstandard>=0.25.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["data*", "utils*"]


[tool.ruff]
include = ["**/*.py", "**/*.ipynb"]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    ".ipynb_checkpoints",
    "*.egg-info",
]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM", "T20", "ARG", "PIE", "PLR", "PT", "RUF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false

[tool.uv.sources]
pyhyperscattering = { git = "https://github.com/usnistgov/PyHyperScattering.git" }
pyref = { git = "https://github.com/WSU-Carbon-Lab/pyref.git", rev = "beam-preview-three-panel" }
notion-notebook = { git = "https://github.com/HarlanHeilman/notion-notebook.git" }

[tool.ruff.lint.per-file-ignores]
"**/*.ipynb" = [
    "E402",  # Module level import not at top of file (common in notebooks)
    "F401",  # Imported but unused (common in exploratory notebooks)
    "F811",  # Redefinition of unused (common when re-running cells)
    "T201",  # Print statements (common in notebooks for output)
    "N806",  # Variable in function should be lowercase (scientific notation like Q, R, dR)
    "PLR0913",  # Too many arguments (common in scientific functions)
    "PLR2004",  # Magic value used in comparison (common in notebooks)
]
